# polyscope

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: CMakeLists.txt
examples/demo-app/: CMakeLists.txt  demo_app.cpp
include/polyscope/: standardize_data_array.h
include/polyscope/render/opengl/: gl_engine.h
src/: CMakeLists.txt  messages.cpp  polyscope.cpp  slice_plane.cpp  view.cpp
src/render/: engine.cpp  ground_plane.cpp
src/render/opengl/: gl_engine.cpp
test/: CMakeLists.txt
